# fronei

./: .gitignore  BACKLOG.md  Fronei_Brand_Template.pptx  README.md  Subhamoy_Chakraborty_Resume.docx  railway.toml  render.yaml
apps/api/: .env.example  .gitignore  pyproject.toml  test_admin.db-journal
apps/api/alembic/: env.py
apps/api/app/: auth.py  config.py  main.py  observability.py  schemas.py
apps/api/evals/: context_classifier_cases.json  eval_cases_routing_seed.json  golden_turns.json  live_quality.json  research_golden_set.json  run_parity_comparator.py  run_research_golden_set.py
apps/api/pptx_render/: package-lock.json  package.json  render.js
apps/api/scripts/: measure_latency.py  run_research_eval.py  seed_eval_cases.py  smoke_docgen.py
apps/api/tests/: conftest.py  test_admin_authorization.py  test_admin_jobs.py  test_admin_privacy_delete.py  test_admin_token_endpoints.py  test_agent_attachment_context.py  test_agent_document_ast.py  test_agent_evals.py  test_agent_model_overrides_router.py  test_agent_model_policy.py  test_agent_prompt_library.py  test_agent_runtime.py  test_agent_runtime_phase_a.py  test_agent_v3_attachment_context.py  test_agent_v3_document_ast.py  test_agent_v3_model_overrides_router.py  test_agent_v3_model_policy.py  test_agent_v3_prompt_library.py  test_agent_v3_runtime.py  test_agentdeck_judges.py  test_agentdeck_lighthouse_fixture.py  test_agentdeck_phase4.py  test_analytics.py  test_auth_tokens.py  test_blob_store.py  test_classifier.py  test_components_agentdeck.py  test_components_planner.py  test_compute_staleness.py  (+96 more)
(+510 files in other folders)
