[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fronei-api"
version = "0.1.0"
description = "Fronei — personal AI assistant API"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "litellm>=1.40.0",
  "PyYAML>=6.0.1",
  "SQLAlchemy>=2.0.30",
  "psycopg2-binary>=2.9.0",
  "python-dotenv>=1.0.1",
  "httpx>=0.27.0",
  "ddgs>=0.1.0",
  "alembic>=1.13.0",
  "PyJWT>=2.8.0",
  "cryptography>=42.0.0",
  "pymupdf>=1.24.0",
  "markdown-it-py>=4.2.0",
  "python-docx>=1.1.0",
  "openpyxl>=3.1.0",
  "python-multipart>=0.0.9",
  "python-pptx>=1.0.0",
  "boto3>=1.35.0,<2.0",
  "sentry-sdk[fastapi]>=2.21.0,<3.0",
  "langgraph>=0.2.0",
  "langsmith>=0.9.0",
  "langgraph-checkpoint-sqlite>=2.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=9.1.1", "ruff>=0.5.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]   # pycodestyle errors/warnings + pyflakes + isort
ignore = ["E501"]                # line length handled by formatter, not linter

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
